--- a/style/style.css
+++ b/style/style.css
@@ -18,7 +18,13 @@ ul {
 .nav-link:hover {
   color: lightskyblue;
 }
-
+.fixednav {
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 99999;
+}
 /* HEADER */
 .bannerbg {
   background-image: url(../imgs/banner-bg.png);
@@ -53,12 +59,13 @@ ul {
   align-items: center;
 }
 /* MEDIA FOR CENTRAL IMG */
-@media screen and (min-width: 2000px) {
+@media screen and (min-width: 992px) {
   .query {
-    align-items: start;
+    align-items: center;
+    height: 500px;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 992px) {
   .ducksuper {
     height: 70%;
   }
