--- a/style/style.css
+++ b/style/style.css
@@ -107,3 +107,30 @@ ul {
   border-right: solid 1px rgba(234, 236, 239);
   border-left: solid 1px rgba(234, 236, 239);
 }
+/* FOOTER */
+
+.footercontainer {
+  margin-top: 50px;
+  background-color: rgba(248, 248, 248);
+  margin: 0 auto;
+}
+.wrapper {
+  margin-right: 150px;
+  margin-left: 150px;
+  text-align: center;
+  padding-top: 20px;
+}
+.custominput {
+  background: rgba(248, 248, 248);
+  border: none;
+  border-bottom: 1px solid rgba(234, 236, 239);
+  border-radius: 0;
+}
+.form-control:focus {
+  border: 0;
+  border-bottom: 2px solid #86b7fe;
+  box-shadow: none;
+}
+.iconcontainer {
+  gap: 30px;
+}
